css/styles.production.css
/* ... */
.form-style-1 input[type="date"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 input[type="datetime"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 input[type="number"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 input[type="search"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 input[type="time"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 input[type="url"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 input[type="email"]:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 textarea:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 select:focus {
  -webkit-box-shadow: 0 0 8px #565656;
  box-shadow: 0 0 8px #565656;
  border: 1px solid #565656;
}
.form-style-1 .field-divided {
  width: 49%;
}

.form-style-1 .field-long {
  width: 100%;
}
.form-style-1 .field-select {
  width: 100%;
}
.form-style-1 .field-textarea {
  height: 100px;
}

.form-style-1 .required {
  color: #b90808;d;
}

.contact-formtext {
  text-align: left;
}

.contact-block {
  margin: 0px 0px 0px 110px;
  text-align: left;
}

/* Footer */

.page-footer {
  clear: both;
  text-align: center;
  position: fixed;
  bottom: 0;
  left: 0;
  justify-content: center;
  width: 100%;
  background-color: var(--background-primary);
  padding: 1em;
}

.social__media {
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.footer-text {
  margin: 2em 1em;
}

.social__logo {
  cursor: pointer;
  margin: 0em 0.25em;
}

.social__logo:hover {
  opacity: 0.5;
  transition: var(--primary-transition);
}
.skills-text {
  margin: 0px 150px 20px 50px;
  text-align: right;
}

.page-title {
  margin: 0px 0px 50px 50px;
  font-family: "Rubik", sans-serif;
  font-weight: 500;
  font-size: 90px;
  line-height: 1;
}
.hello-title {
  margin: 50px 0px 0px 100px;
  font-family: "Rubik", sans-serif;
  font-weight: bold;
  font-size: 120px;
  line-height: 1;
}

.about-page {
  margin-top: 100px;
}

.about-title {
  margin: 0px 0px 10px 50px;
  font-family: "Rubik", sans-serif;
  font-weight: 500;
  font-size: 90px;
  line-height: 1;
}

.about-text {
  margin: 0px 50px 20px 100px;
  text-align: justify;
  width: 750px;
}

.grid__item {
  display: inline-block;
  width: 33%;
  opacity: 0.4;
  transition: 0.9s;
}

.grid__item:hover {
  opacity: 1;
}

.grid {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 20px;
  margin: 20px;
}

.grid__item {
  background-color: #d3d3d3;
  padding: 10px;
  width: auto;
}

.grid__item:last-child {
  -ms-grid-column: 3;
  grid-column-start: 3;
  -ms-grid-column-span: 0;
  grid-column-end: 3;
  -ms-grid-row: 1;
  grid-row-start: 1;
  -ms-grid-row-span: 2;
  grid-row-end: 3;
  background-color: #4c4c4c;
  color: #fff;
}

.hvr-overline-reveal {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  position: relative;
  overflow: hidden;
}
.hvr-overline-reveal:before {
  content: "";
  position: absolute;
  z-index: -1;
  left: 0;
  right: 0;
  top: 0;
  background: #b90808;
  height: 4px;
  -webkit-transform: translateY(-4px);
  transform: translateY(-4px);
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.hvr-overline-reveal:hover:before,
.hvr-overline-reveal:focus:before,
.hvr-overline-reveal:active:before {
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

.link-contact-me {
  color: #fff;
}

@media all and (max-width: 500px) {
  .hvr-sweep-to-left {
    margin: 7px 0px 7px 0px;
  }
  .grid {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
    margin: 0 10px 0 10px;
    padding: auto;
  }

  .about-page {
    margin: 0;
  }
  .about-text {
    width: auto;
    margin: auto;
    padding: 0px 20px 0px 20px;
  }

  .skills-text {
    width: auto;
    margin: 20px 50px 0px 50px;
  }
  .hello-title {
    width: auto;
    margin: 20px 10px 0px 10px;
    text-align: center;
    font-size: 80px;
  }
  .profile__picture {
    width: 90%;
    align-items: center;
    padding: 0px 10px 10px 10px;
  }
  .profile {
    padding: 0px 10px 0px 10px;
    align-content: center;
    align-items: center;
  }
  .intro-text {
    text-align: center;
    padding: 0 10px 0 10px;
  }
  .page-footer {
    margin-bottom: 0;
    background-color: var(--background-primary);
    position: unset;
  }
}
@media all and (min-width: 500px) and (max-width: 750px) {
  .grid {
    -ms-grid-columns: 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr;
  }
  .about-text {
    width: auto;
  }
  .skills-text {
    width: auto;
  }
  .intro-text {
    text-align: center;
    padding-left: 10px;
  }
}
@media all and (max-width: 750px) {
  .grid {
    grid-gap: 10px;
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
  .grid__item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }
  h1 {
    font-size: 22px;
  }
}

